k8s/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: python-app
  name: python-app
spec:
  replicas: 3     # 3 replicas of our application
  selector:
    matchLabels:
      app: python-app
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: python-app
    spec:
      containers:
      - image: shurikby/python-app:v1.0
        name: python-app
        readinessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 10
          failureThreshold: 10
        resources:
          limits:
            memory: "200Mi"
            cpu: "30m"
          requests:
            memory: "40Mi"
            cpu: "5m"
status: {}
