k8s/env-prep.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: main
spec: {}
status: {}
---
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: canary
spec: {}
status: {}
---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: python-app
  name: python-app
  namespace: main
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: python-app
status:
  loadBalancer: {}
  ---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: python-app
  name: python-app
  namespace: canary
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: python-app
status:
  loadBalancer: {}
