k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: python-app
  name: $BRANCH_NAME
  namespace: python-app
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    branch: $BRANCH_NAME
status:
  loadBalancer: {}
